include/dss_capi.h

    /*
    Fixed interval time value, hours
    */
    DSS_CAPI_DLL double LoadShapes_Get_HrInterval(void);
    /*
    Fixed Interval time value, in minutes
    */
    DSS_CAPI_DLL double LoadShapes_Get_MinInterval(void);
    DSS_CAPI_DLL double LoadShapes_Get_sInterval(void); // deprecated, see #24
    DSS_CAPI_DLL void LoadShapes_Set_Sinterval(double Value); // deprecated, see #24
    /*
    Fixed interval time value, hours.
    */
    DSS_CAPI_DLL void LoadShapes_Set_HrInterval(double Value);
    /*
    Fixed Interval time value, in minutes
    */
    DSS_CAPI_DLL void LoadShapes_Set_MinInterval(double Value);
    DSS_CAPI_DLL int32_t LoadShapes_New(char* Name);
    DSS_CAPI_DLL double LoadShapes_Get_PBase(void);
    /*
    Base for normalizing Q curve. If left at zero, the peak value is used.
    */
    DSS_CAPI_DLL double LoadShapes_Get_Qbase(void);
    DSS_CAPI_DLL void LoadShapes_Set_PBase(double Value);
    /*
    Base for normalizing Q curve. If left at zero, the peak value is used.
    */
    DSS_CAPI_DLL void LoadShapes_Set_Qbase(double Value);
    /*
    T/F flag to let Loads know to use the actual value in the curve rather than use the value as a multiplier.
    */
    DSS_CAPI_DLL uint16_t LoadShapes_Get_UseActual(void);
    /*
    T/F flag to let Loads know to use the actual value in the curve rather than use the value as a multiplier.
    */
    DSS_CAPI_DLL void LoadShapes_Set_UseActual(uint16_t Value);