src/v8/CAPI_LoadShapes.pas


begin
    Value := PDoubleArray(ValuePtr);
    if ActiveCircuit[ActiveActor] <> NIL then
    begin
        if ActiveLSObject <> NIL then
            with ActiveLSObject do
            begin
                // Only accept the new data when the number of points match
                if ValueCount <> NumPoints then
                begin
                    DoSimpleMsg(Format('The number of values (%d) does not match the current Npts (%d)!', [ValueCount, NumPoints]), 61102);
                    Exit;
                end;

                SetLength(Hours, 0);
                SetLength(Hours, ValueCount);
                Move(ValuePtr[0], Hours[0], ValueCount * SizeOf(Double));
            end
        else
        begin
            DoSimpleMsg('No active Loadshape Object found.', 61002);
        end;
    end;
end;
//------------------------------------------------------------------------------
function LoadShapes_Get_HrInterval(): Double; CDECL;
begin
    Result := 0.0;
    if ActiveCircuit[ActiveActor] <> NIL then
        if ActiveLSObject <> NIL then
            Result := ActiveLSObject.Interval;

end;
//------------------------------------------------------------------------------
function LoadShapes_Get_MinInterval(): Double; CDECL;
begin
    Result := 0.0;
    if ActiveCircuit[ActiveActor] <> NIL then
        if ActiveLSObject <> NIL then
            Result := ActiveLSObject.Interval * 60.0;
end;
//------------------------------------------------------------------------------
function LoadShapes_Get_sInterval(): Double; CDECL;
begin
    Result := 0.0;
    if ActiveCircuit[ActiveActor] <> NIL then
        if ActiveLSObject <> NIL then
            Result := ActiveLSObject.Interval * 3600.0;
end;
//------------------------------------------------------------------------------
procedure LoadShapes_Set_HrInterval(Value: Double); CDECL;
begin
    if ActiveCircuit[ActiveActor] <> NIL then
        if ActiveLSObject <> NIL then
            ActiveLSObject.Interval := Value;
end;
//------------------------------------------------------------------------------
procedure LoadShapes_Set_MinInterval(Value: Double); CDECL;
begin
    if ActiveCircuit[ActiveActor] <> NIL then
        if ActiveLSObject <> NIL then
            ActiveLSObject.Interval := Value / 60.0;
end;
//------------------------------------------------------------------------------
procedure LoadShapes_Set_Sinterval(Value: Double); CDECL;
begin
    if ActiveCircuit[ActiveActor] <> NIL then
        if ActiveLSObject <> NIL then
            ActiveLSObject.Interval := Value / 3600.0;
end;
//------------------------------------------------------------------------------
function LoadShapes_New(const Name: PAnsiChar): Integer; CDECL;
begin
    Result := AddObject('loadshape', Name);    // Returns handle to object
    ActiveLSObject := ActiveDSSObject[ActiveActor] as TLoadShapeObj;
end;
//------------------------------------------------------------------------------
function LoadShapes_Get_PBase(): Double; CDECL;
begin
    Result := 0.0;
    if ActiveCircuit[ActiveActor] <> NIL then
        if ActiveLSObject <> NIL then
            Result := ActiveLSObject.baseP;
end;
//------------------------------------------------------------------------------
function LoadShapes_Get_Qbase(): Double; CDECL;
begin
    Result := 0.0;
    if ActiveCircuit[ActiveActor] <> NIL then
        if ActiveLSObject <> NIL then
            Result := ActiveLSObject.baseQ;
end;
//------------------------------------------------------------------------------
procedure LoadShapes_Set_PBase(Value: Double); CDECL;
begin
    if ActiveCircuit[ActiveActor] <> NIL then
        if ActiveLSObject <> NIL then
            ActiveLSObject.baseP := Value;
end;
//------------------------------------------------------------------------------
procedure LoadShapes_Set_Qbase(Value: Double); CDECL;
begin
    if ActiveCircuit[ActiveActor] <> NIL then
        if ActiveLSObject <> NIL then
            ActiveLSObject.baseQ := Value;
end;
//------------------------------------------------------------------------------
function LoadShapes_Get_UseActual(): Wordbool; CDECL;
begin
    Result := FALSE;
    if ActiveCircuit[ActiveActor] <> NIL then
        if ActiveLSObject <> NIL then
            Result := ActiveLSObject.UseActual;
end;
//------------------------------------------------------------------------------
procedure LoadShapes_Set_UseActual(Value: Wordbool); CDECL;
begin
    if ActiveCircuit[ActiveActor] <> NIL then
        if ActiveLSObject <> NIL then
            ActiveLSObject.UseActual := Value;
end;
//------------------------------------------------------------------------------
end.
